@@ -11,11 +11,7 @@
   </requires>
   <extension
     point="xbmc.pvrclient"
-    library_linux="pvr.hts.so"
-    library_osx="pvr.hts.dylib"
-    library_freebsd="pvr.hts.so"
-    library_windx="pvr.hts.dll"
-    library_android="libpvr.hts.so"
+    library_@PLATFORM@="@LIBRARY_FILENAME@"
     avahi_type="_htsp._tcp."
     avahi_ip_setting="host"
     avahi_port_setting="htsp_port"/>
@@ -180,6 +176,6 @@
     <disclaimer lang="vi_VN">Đây là phần mềm không ổn định! Các tác giả không chịu trách nhiệm đối với bản ghi âm thất bại, giờ không chính xác, giờ lãng phí, hoặc bất kỳ tác dụng không mong muốn khác..</disclaimer>
     <disclaimer lang="zh_CN">这是不稳定版的软件！作者不对录像失败、错误定时造成时间浪费或其它不良影响负责。</disclaimer>
     <disclaimer lang="zh_TW">這是測試版軟體！其原創作者並無法對於以下情況負責，包含：錄影失敗，不正確的定時設定，多餘時數，或任何產生的其它不良影響...</disclaimer>
-    <platform>all</platform>
+    <platform>@PLATFORM@</platform>
   </extension>
 </addon>
